[package]
name = "bullet_ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
bulletproofs = "5.0.0"
curve25519-dalek = "4.1.3"
merlin = "3.0.0"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.9.2"
ringbuf = "0.4.8"
rusqlite = "0.37.0"
toml = "0.9.8"
serde = { version = "1", features = ["derive"] }
nix = { version = "0.30.1", features = ["net","event", "signal", "socket"] }
