[package]
name = "bullet_ledger"
version = "0.1.0"
edition = "2024"

[build-dependencies]

[dependencies]
bulletproofs = "5.0.0"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.2.0"
merlin = "3.0.0"

sha2 = "0.10.9"
blake3 = "1.8.2"

hex = "0.4.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
zeroize = "1.8.2"
rand = "0.9.2"

nix = { version = "0.30.1", features = ["event", "fs"] }
mio = { version = "1.0.4", features = ["net", "os-poll", "os-ext"] }

toml = "0.9.8"
serde = { version = "1", features = ["derive"] }
lru = "0.16.2"
